# pomatez

./: .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .release-please-manifest.json  .travis.yml  12dced5d-e473137e7dc8feded2a6.js  12dced5d-e473137e7dc8feded2a6.js.map  404.html  6d06528a-652b23a304441a8b0c51.js  6d06528a-652b23a304441a8b0c51.js.map  6d06528a-837dcf3390f04577e539.js  6d06528a-837dcf3390f04577e539.js.map  6d06528a-b4632a932c4227cbd8b9.js  6d06528a-b4632a932c4227cbd8b9.js.map  6d06528a-bdc1eb94fe74262f6afe.js  6d06528a-bdc1eb94fe74262f6afe.js.map  6d06528a-e32b891585912f114fbf.js  6d06528a-e32b891585912f114fbf.js.map  Boosters-d1882130c5fcf62e85f5.js  Boosters-d1882130c5fcf62e85f5.js.map  CHANGELOG.md  CONTRIBUTING.md  Download-f9c3e0a71e8c1a5b67e8.js  Download-f9c3e0a71e8c1a5b67e8.js.map  Features-1151508dc183acb4bd4e.js  Features-1151508dc183acb4bd4e.js.map  LICENSE  README.md  Roadmap-36aed6d9b6f57b6aea07.js  Roadmap-36aed6d9b6f57b6aea07.js.map  a3336d3c033a5ec9d59a088cb032c68b95c64a61-0a8fd5a1329a83795dfe.js  a3336d3c033a5ec9d59a088cb032c68b95c64a61-0a8fd5a1329a83795dfe.js.map  a3336d3c033a5ec9d59a088cb032c68b95c64a61-159f7df82f844a2a2b2c.js  a3336d3c033a5ec9d59a088cb032c68b95c64a61-159f7df82f844a2a2b2c.js.map  a3336d3c033a5ec9d59a088cb032c68b95c64a61-18ee8abc009c08863383.js  a3336d3c033a5ec9d59a088cb032c68b95c64a61-18ee8abc009c08863383.js.map  a3336d3c033a5ec9d59a088cb032c68b95c64a61-1b642cf2e3b48bb5f479.js  (+534 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-tauri.yml  build.yml  codeql-analysis.yml  pre-commit-check.yaml  pre-commit-check.yml  release-please.yml  test-build-thingy.yml  website-deploy.yml
.storybook/: main.ts  preview.tsx
404/: index.html
@archives/main/: package.json
@archives/main/src/: main.ts
@archives/renderer/: package.json
@archives/renderer/src/: App.tsx
_gatsby/slices/: _gatsby-scripts-1.html
app/: .gitignore  package.json  tsconfig.json  tts-generator.js
app/electron/: electron.ts  jest.config.js  package.json  preload.ts  tsconfig.json
app/electron/electron-builder/: afterSign.js
app/electron/functions/: blockShortcutKeys.ts  globalShortcuts.ts  hostBlocker.ts  index.ts
app/main/: jest.config.js  nodemon.json  package.json  tsconfig.json
app/public/: electron.js  index.html  preload.js
app/renderer/: .env  package.json  tsconfig.json  tts-generator.js
app/shareables/: package.json  rollup.config.js  tsconfig.json
app/src/: App.js  App.tsx  declarations.d.ts
app/tauri/: Cargo.toml  README.MD  release.conf.json  tauri.conf.json
app/tauri/.cargo/: config.toml
app/tauri/capabilities/: main.json
app/tauri/icons/: icon.icns
app/tauri/release-prep/: release-prep.js
app/tauri/src/: commands.rs  global_shortcuts.rs  lib.rs  main.rs  main_window.rs  system_tray.rs  updater.rs
app/tauri/src/desktop/: commands.rs  mod.rs
app/tauri/util/: cargo-version-updater.js
apps/desktop/: .eslintignore  .eslintrc.cjs  .gitignore  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
apps/main/: package.json
apps/website/: package.json
offline-plugin-app-shell-fallback/: index.html
page-data/: app-data.json
page-data/404/: page-data.json
page-data/404.html/: page-data.json
page-data/index/: page-data.json
page-data/offline-plugin-app-shell-fallback/: page-data.json
public/: electron.js  index.html
public/scripts/: isDev.js  soundPlayer.js
snap/: snapcraft.yaml
snap/gui/: pomatez.desktop  productivity-timer.desktop
src/: App.js  electron.js  index.js  main.js  sprite.js
src/components/: index.js
src/containers/: Home.js  index.js
src/helpers/: exportVoice.js  fetchSvg.js  index.js
src/hooks/: index.js  useAnimate.js  useDuration.js  useStore.js
src/models/: control.js  index.js  navigation.js  setting.js  store.js
src/styles/: main.scss
src/stylesheets/: main.scss
static/d/: 1509715952.json  2369955397.json  2411392764.json  2528602702.json  2743800741.json  288158433.json  2998988286.json  3416185614.json  3441989211.json  3448658702.json  3605297724.json  4005499406.json  606311363.json
website/: .env.production  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  README.md  gatsby-config.js  gatsby-config.ts  package.json  sitemap.xml  tsconfig.json
website/content/: download.md  features.md  hero.md  roadmap.md
website/pages/: index.tsx
website/src/: config.js  config.ts
(+754 files in other folders)
